--- a/style.css
+++ b/style.css
@@ -5126,10 +5126,10 @@ section.blog > h1{
 	color: black;
 	text-decoration: none;
 }
-/* a.homePagePost:hover{
+a.homePagePost:hover{
 	color: #0062B8;
 	text-decoration: underline;
-} */
+}
 .homePostContainer{
 	display: flex;
 	padding-bottom: 50px;
@@ -5248,6 +5248,52 @@ section.blog > h1{
 /*Styling for elementor text boxes*/
 .elementor-text-editor {
 	color: #000000;
+}
+
+.search-color {
+	color: black;
+	text-decoration: none;
+}
+
+.search-grid {
+	display: grid;
+	grid-template-columns: 33% 33% 33%;
+	grid-template-rows: auto;
+	gap: 50px;
+}
+.grid {
+
+}
+.inline {
+	/* display:inline; */
+}
+.image-resize {
+	width: 250px;
+	height: 280px;
+}
+.searchPost {
+	position: relative;
+	display: flex;
+	flex-direction: row;
+	width: 50%;
+}
+.searchPost li{
+	list-style-type: none;
+}
+.postIMG {
+	width: 100%;
+	height: auto;
+}
+.description {
+	position:relative;
+}
+.searchPostSingle{
+	display: grid;
+	grid-template-columns: 1fr 2fr;
+	position: relative;
+	background-color: white;
+	padding: 5px 5px 5px 5px;
+	gap: 50px;
 }
 
 /* FIN! */
