--- a/style.css
+++ b/style.css
@@ -5079,6 +5079,131 @@ span.archivedStatus{
 	padding-left: 3px;
 	margin: 3px;
 }
+* .projectMainContODH{
+	position: relative;
+	width: 100%;
+} */
+h2.projectMainContODH{
+	text-align: center;
+}
+
+.projectHeroODH{
+	position: relative;
+	width: 90%;
+	left: 6%;
+	display: flex;
+  justify-content: center;
+  align-items: center;
+	box-shadow: 5px 5px 18px #e6e6e6;
+}
+.projectHeroIMG{
+	position: relative;
+	flex-shrink: 0;
+	max-height: 48vh;
+}
+.projectPersonnel{
+	position: relative;
+}
+
+a.projectPersonnelSingle{
+	font-weight: 10;
+}
+.projectListItem{
+	list-style-type:none;
+}
+.odhAlumni .projectAlumni{
+	margin-bottom: 0px;
+	font-size: 15px;
+	font-weight: 0px;
+}
+.listDetailsStyle{
+	list-style-type:none
+}
+ .gridContWrapperCont{
+	display: grid;
+	grid-template-columns: repeat(2, 1fr);
+	gap: 20px;
+	grid-auto-rows: minmax(100px, auto);
+	position: relative;
+	padding-top: 100px;
+} 
+.innerProjectGrid{
+	display: grid;
+  	grid-template-columns: 1fr;
+	grid-gap: 5px;
+	width: 90%;
+}
+.projectGridRow{
+	display: grid;
+	grid-template-columns: 1fr, 1fr;
+	display: inline-block;
+}
+.projectGridRow div {
+	display: inline-block;
+}
+.projectGridRow > div{
+	width: 45%;
+	padding: 3px;
+	vertical-align: top;
+}
+.projectGridRow:nth-child(even){
+	background-color: #F6F6F8;
+}
+.gridDescriptionProjODH{
+	grid-column: 1;
+	grid-row: 1/4;
+	position: relative;
+	background-color: #e6e6e6;
+	padding: 40px;
+	left: 15%;
+}
+.gridDescriptionTitle{
+	text-align: center;
+}
+.gridProjStatODH{
+	grid-column: 2;
+	grid-row: 1/4;
+	position: relative;
+	padding-left: 18%;
+}
+.listStyleODH{
+	padding: 5px;
+}
+.gridSnapshotsODH{
+	grid-column: 1/3;
+	grid-row: 4; 
+	position: relative;
+	padding-top: 50px;
+	padding-left: 10%;
+}
+.object-fit_contain { 
+	object-fit: contain; 
+}
+
+.singleSnapshot img { 
+	height: 10vh; background-color: #E6E6E6;
+}
+.singleSnapshot img[class] { 
+  width: 100%;
+}
+.singleSnapshot {
+  float: left;
+  width: 20%;
+  margin: 0 30px 20px 0;
+}
+.alignmentStyleODH{
+	position: relative;
+	left: 50px;
+}
+.alignmentStyle1ODH{
+	position: relative;
+	left: 85px;	
+}
+.alignmentStyle2ODH{
+	position: absolute;
+	left: 150px;
+}
+
 
 /*mobile project styles*/
 @media only screen  and (max-width: 600px){
