made edits including taking out code to make the theme look more similar to the odh main theme.

--- a/style.css
+++ b/style.css
@@ -707,6 +707,7 @@ a#logo > img {
 	font-family: "HCo Ringside Narrow SSm", "Open Sans", Helvetica, Arial, sans-serif;
     font-weight: lighter;
 	line-height: 1.1em;
+	color: #FFF;
 }
 
 #site-title a span {
