--- a/style.css
+++ b/style.css
@@ -1101,13 +1101,13 @@ nav#mobile-menu #nav-cancel {
 	position: absolute;
 	top: 0;
 	right: 0;
-    display: inline-block;
+  display: inline-block;
 	width: auto;
 	height: 2em;
 	margin-top: 25px;
 	padding: 0 1em;
 	cursor: pointer;
-    font-size: 24px;
+  font-size: 24px;
 	line-height: 2.3;
 }
 
@@ -4789,16 +4789,17 @@ body.mobile .main {min-height:0;}
 }
 
 nav#humanities-menu {
-    display: block;
-    margin-top: var(--header-nav-height);
+	display: block;
+	margin-top: var(--header-nav-height);
 }
 
 nav#humanities-menu li {
 	display: inline-block;
-	padding-top: 10px;
-	padding-left: 35px;
-	padding-bottom: 7px;
-	padding-right: 35px; 
+	margin-top: 1rem;
+	margin-left: 2rem;
+	margin-bottom: 1em;
+	margin-right: 2rem;
+	border-bottom: 3px solid white;
 	border-bottom: 3px solid white; 
 	font-family: "HCo Ringside Narrow SSm", "Open Sans", Helvetica, Arial, sans-serif;
 	font-weight: lighter;
