--- a/cryout/css/jquery-ui.theme.css
+++ b/cryout/css/jquery-ui.theme.css
@@ -14,7 +14,7 @@
 
 /* Component containers
 ----------------------------------*/
-.ui-widget {
+/* .ui-widget {
 	font-family: Trebuchet MS,Tahoma,Verdana,Arial,sans-serif;
 	font-size: 1.1em;
 }
@@ -44,11 +44,11 @@
 }
 .ui-widget-header a {
 	color: #ffffff;
-}
+} */
 
 /* Interaction states
 ----------------------------------*/
-.ui-state-default,
+/* .ui-state-default,
 .ui-widget-content .ui-state-default,
 .ui-widget-header .ui-state-default {
 	border: 1px solid #cccccc;
@@ -97,11 +97,11 @@
 .ui-state-active a:visited {
 	color: #eb8f00;
 	text-decoration: none;
-}
+} */
 
 /* Interaction Cues
 ----------------------------------*/
-.ui-state-highlight,
+/* .ui-state-highlight,
 .ui-widget-content .ui-state-highlight,
 .ui-widget-header .ui-state-highlight {
 	border: 1px solid #fed22f;
@@ -122,26 +122,26 @@
 .ui-widget-content .ui-priority-secondary,
 .ui-widget-header .ui-priority-secondary {
 	opacity: .7;
-	filter:Alpha(Opacity=70); /* support: IE8 */
+	filter:Alpha(Opacity=70); support: IE8
 	font-weight: normal;
 }
 .ui-state-disabled,
 .ui-widget-content .ui-state-disabled,
 .ui-widget-header .ui-state-disabled {
 	opacity: .35;
-	filter:Alpha(Opacity=35); /* support: IE8 */
+	filter:Alpha(Opacity=35); support: IE8
 	background-image: none;
 }
 .ui-state-disabled .ui-icon {
-	filter:Alpha(Opacity=35); /* support: IE8 - See #6059 */
-}
+	filter:Alpha(Opacity=35); support: IE8 - See #6059
+} */
 
 
 /* Misc visuals
 ----------------------------------*/
 
 /* Corner radius */
-.ui-corner-all,
+/* .ui-corner-all,
 .ui-corner-top,
 .ui-corner-left,
 .ui-corner-tl {
@@ -164,19 +164,19 @@
 .ui-corner-right,
 .ui-corner-br {
 	border-bottom-right-radius: 4px;
-}
+} */
 
 /* Overlays */
-.ui-widget-overlay {
+/* .ui-widget-overlay {
 	background: #666666;
 	opacity: .5;
-	filter: Alpha(Opacity=50); /* support: IE8 */
+	filter: Alpha(Opacity=50); support: IE8
 }
 .ui-widget-shadow {
 	margin: -5px 0 0 -5px;
 	padding: 5px;
 	background: #000000;
 	opacity: .2;
-	filter: Alpha(Opacity=20); /* support: IE8 */
-	border-radius: 5px;
+	filter: Alpha(Opacity=20); support: IE8
+	border-radius: 5px; */
 }
