--- a/style.css
+++ b/style.css
@@ -5393,6 +5393,10 @@ a.homePagePost:hover{
 	color:#0057b8;
 }
 
+.entry-content a:hover {
+	color: black;
+	font-weight: 400;
+}
 .text-content a {
 	text-decoration: none;
 	color:#0057b8;
