add the styling for the links for footer, closes issues #552

--- a/style.css
+++ b/style.css
@@ -4873,7 +4873,7 @@ div#content a.lp-box-readmore, div#content a.staticslider-button, div#content a.
 
 
 aside#colophon a {
-	color: #141414;
+	color: #0057b8;
 	font-family: 'Public Sans', Arial, sans-serif;
 	text-decoration: none;
 }
