--- a/style.css
+++ b/style.css
@@ -4875,7 +4875,7 @@ div#content a.lp-box-readmore, div#content a.staticslider-button, div#content a.
 aside#colophon a {
 	color: #0057b8;
 	font-family: 'Public Sans', Arial, sans-serif;
-	text-decoration: none;
+	text-decoration: underline;
 }
 
 
