--- a/style.css
+++ b/style.css
@@ -276,8 +276,8 @@ li > ol {
 
 ul {
 	/* list-style-type: disc; */
-  font-size: 16px;
-  font-weight: 600;
+  /* font-size: 16px;
+  font-weight: 600; */
 }
 
 /* ul ul {
