--- a/style.css
+++ b/style.css
@@ -5532,6 +5532,9 @@ h3.label.projects ~ li a {
 	font-size: 16px;
 }
 
+.searchPostSingle .content-type {
+	text-transform: capitalize;
+}
 .pagePost {
 	color: #0057b8;
 	text-decoration: none;
@@ -5554,4 +5557,5 @@ text-align: center;
 .homePostText a {
 	color: #0062B8;
 }
+
 /* FIN! */
